--- a/src/sib-cloud.html
+++ b/src/sib-cloud.html
@@ -6,6 +6,7 @@
     <style>
       :host {
         --sky-cloud-size-private: var(--sky-cloud-size, 100px);
+        display: block;
       }
 
       .cloud {
