--- a/src/sib-sun.html
+++ b/src/sib-sun.html
@@ -6,6 +6,7 @@
 
     <style>
       :host {
+        display: block;
         width: var(--sky-sun-size, 100px);
         height: var(--sky-sun-size, 100px);
         border-radius: 50%;
