Make page longer

--- a/src/sib-app.html
+++ b/src/sib-app.html
@@ -30,7 +30,7 @@
       sib-cloud.one {
         position: absolute;
         top: 15%;
-        left: 55%;
+        right: 5%;
         z-index: 40;
         --sky-cloud-size: 80px;
       }
@@ -62,6 +62,9 @@
       <div>Last week:</div>
       <div>09:40</div>
       <div>07:01</div>
+      <div>10:30</div>
+      <div>09:10</div>
+      <div>09:15</div>
       <div>10:30</div>
       <div>09:10</div>
       <div>09:15</div>
