--- a/src/sib-app.html
+++ b/src/sib-app.html
@@ -1,7 +1,11 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/paper-styles/color.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../bower_components/app-storage/app-localstorage/app-localstorage-document.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="sib-sun.html">
 <link rel="import" href="sib-cloud.html">
 
@@ -47,6 +51,9 @@
       }
 
       .log-button {
+        color: white;
+        height: 120px;
+        width: 120px;
         font-size: x-large;
       }
     </style>
@@ -58,7 +65,12 @@
     </div>
 
     <div class="layout vertical center">
-      <paper-button raised class="log-button">Log Today's Time</paper-button>
+      <!--<paper-button raised class="log-button">
+        <iron-icon icon="icons:alarm-on"></iron-icon>
+        Log Today's Time
+      </paper-button>-->
+      <paper-icon-button icon="icons:alarm-on" class="log-button">
+      </paper-icon-button>
       <div>Last week:</div>
       <div>09:40</div>
       <div>07:01</div>
