--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>still in bed?</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="manifest" href="/manifest.json">
-    <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="/src/sib-app.html">
+    <link rel="manifest" href="manifest.json">
+    <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+    <link rel="import" href="src/sib-app.html">
   </head>
   <body>
     <sib-app></sib-app>
