Fix delay for showing today's date

--- a/src/sib-app.html
+++ b/src/sib-app.html
@@ -125,7 +125,7 @@
       ],
 
       ready: function() {
-        this.tick();
+        this.async(this.tick);
       },
 
       tick: function() {        
