Move days to its own component

--- a/src/sib-app.html
+++ b/src/sib-app.html
@@ -8,6 +8,7 @@
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="sib-sun.html">
 <link rel="import" href="sib-cloud.html">
+<link rel="import" href="sib-days.html">
 
 <dom-module id="sib-app">
   <template>
@@ -61,22 +62,6 @@
         color: white;
         font-size: 5em;
       }
-
-      .day {
-        color: white;
-        border: 1px;
-        -webkit-border-radius: 10px;
-        -moz-border-radius: 10px;
-        border-radius: 8px;
-        border-width: 2px;
-        border-style: solid;
-        margin: 3px;
-        padding: 4px;
-      }
-
-      .day .t {
-        font-size: 1.5em;
-      }
     </style>
 
     <app-localstorage-document log
@@ -102,24 +87,7 @@
         icon="icons:alarm-on" class="log-button" on-tap="log">
       </paper-icon-button>
       
-      <div class="layout horizontal center">
-        <div class="layout vertical center day">
-          <div class="t">07:30</div>
-          <div>MAR 20</div>
-        </div>
-        <div class="layout vertical center day">
-          <div class="t">08:21</div>
-          <div>MAR 21</div>
-        </div>
-        <div class="layout vertical center day">
-          <div class="t">-</div>
-          <div>MAR 22</div>
-        </div>
-        <div class="layout vertical center day">
-          <div class="t">08:15</div>
-          <div>MAR 23</div>
-        </div>
-      </div>
+      <sib-days list="[[list]]"></sib-days>
       <paper-button>More stats..</paper-button>
     </div>
 
