Remove unused code

--- a/src/sib-app.html
+++ b/src/sib-app.html
@@ -64,7 +64,7 @@
       }
     </style>
 
-    <app-localstorage-document log
+    <app-localstorage-document
       key="sib-prod" data="{{list}}">
     </app-localstorage-document>
 
