--- a/src/sib-days.html
+++ b/src/sib-days.html
@@ -34,6 +34,10 @@
       .button .top {
         font-size: 1.3em;
       }
+
+      .button .top.done {
+        font-size: 1.8em;
+      }
     </style>
 
     <div class="layout horizontal center">
@@ -45,7 +49,7 @@
       </template>
       <div class="layout vertical center center-justified button tile" on-tap="track">
         <div class="top" hidden$="[[today.done]]">I'm up!</div>
-        <div class="top" hidden$="[[!today.done]]">[[today.time]]</div>
+        <div class="top done" hidden$="[[!today.done]]">[[today.time]]</div>
         <div>[[today.month]] [[today.day]]</div>
       </div>
     </div>
