Set pointer cursor

--- a/src/sib-days.html
+++ b/src/sib-days.html
@@ -29,6 +29,7 @@
         width: 75px;
         background-color: white;
         color: var(--paper-blue-300);
+        cursor: pointer;
       }
 
       .button .top {
