Fix mobile vertical scroll

--- a/src/sib-app.html
+++ b/src/sib-app.html
@@ -86,10 +86,7 @@
       <sib-days list="[[list]]" on-track="track"></sib-days>
       <paper-button>More stats..</paper-button>
       
-      <br><br><br><br><br><br>
-      <br><br><br><br><br><br>
-      <br><br><br><br><br><br>
-      <br><br><br><br><br><br>
+      <div style="height: 400px"></div>
     </div>
 
   </template>
