--- a/src/sib-days.html
+++ b/src/sib-days.html
@@ -85,7 +85,7 @@
         },
         days: {
           type: Array,
-          computed: 'getDays(list.splices)',
+          computed: 'getDays(list.*, start)',
         }
       },
 
