Fix days container height

--- a/src/sib-days.html
+++ b/src/sib-days.html
@@ -11,6 +11,10 @@
       :host {
         color: white;
       }
+
+      .container {
+        height: 80px; 
+      }
       
       .tile {
         border: 1px;
@@ -22,6 +26,9 @@
         margin: 3px;
         padding: 4px;
         text-transform: uppercase;
+      }
+
+      .tile.day {
       }
       
       .day .top {
