--- a/src/sib-days.html
+++ b/src/sib-days.html
@@ -37,7 +37,6 @@
         border-width: 2px;
         border-style: solid;
         margin: 2px;
-        padding: 4px;
       }
 
       .tile.day {
@@ -51,6 +50,14 @@
       
       .bottom {
         line-height: 18px;
+        width: 100%;
+        padding: 2px 2px 0 2px;
+        text-align: center;
+        border-bottom: 1px solid;
+      }
+      
+      .top {
+        padding: 0 2px;
       }
 
       .button {
@@ -81,15 +88,15 @@
       <div class="center-justified days">
         <template is="dom-repeat" items="[[days]]">
           <div class="layout vertical center day tile" hidden$="[[item.isToday]]">
+            <div class="bottom">[[item.month]] [[item.day]]</div>
             <div class="top" hidden$="[[!item.done]]">[[item.time]]</div>
             <div class="top" hidden$="[[item.done]]">-</div>
-            <div class="bottom">[[item.month]] [[item.day]]</div>
           </div>
           <div class="layout vertical center center-justified button tile" 
             on-tap="track" hidden$="[[!item.isToday]]">
+            <div class="bottom">[[item.month]] [[item.day]]</div>
             <div class="top" hidden$="[[item.done]]">I'm up!</div>
             <div class="top done" hidden$="[[!item.done]]">[[item.time]]</div>
-            <div class="bottom">[[item.month]] [[item.day]]</div>
           </div>
         </template>
       </div>
