--- a/src/sib-day-tile.html
+++ b/src/sib-day-tile.html
@@ -1,7 +1,4 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/paper-styles/color.html">
-<link rel="import" href="../bower_components/paper-styles/typography.html">
-<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="sib-tile-styles.html">
 
 <dom-module id="sib-day-tile">
@@ -9,18 +6,24 @@
     <style include="iron-flex iron-flex-alignment sib-tile-styles">
       :host {}
 
-      .tile {        
-        width: 56px;
+      .tile {
+        height: 50px;
+        width: 50px;
       }
       
       .date {
+        font-size: 12px;
+        font-weight: 300;
       }
       
       .time {
+        font-size: 18px;
+        font-weight: 300;
       }
+
     </style>
 
-    <div class="layout vertical center tile">
+    <div class="tile">
         <div class="date">[[item.month]] [[item.day]]</div>
         <div class="time" hidden$="[[!item.done]]">[[item.time]]</div>
         <div class="time" hidden$="[[item.done]]">-</div>
