--- a/src/sib-tile-styles.html
+++ b/src/sib-tile-styles.html
@@ -1,9 +1,12 @@
+<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/paper-styles/color.html">
+<link rel="import" href="../bower_components/paper-styles/typography.html">
+<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+
 <dom-module id="sib-tile-styles">
   <template>
-    <style>      
+    <style include="iron-flex iron-flex-alignment">      
       .tile {
-        @apply(--paper-font-button);
-        border: 1px;
         -webkit-border-radius: 10px;
         -moz-border-radius: 10px;
         border-radius: 8px;
@@ -13,17 +16,26 @@
       }
 
       .date {
-        width: 100%;
-        padding: 2px 2px 0 2px;
-        text-align: center;
+        @apply(--layout-horizontal);
+        @apply(--layout-center);
+        @apply(--layout-center-justified);
+        height: 33%;
         border-bottom: 1px solid;
-        line-height: 18px;
+
+        @apply(--paper-font-caption);
       }
       
       .time {
-        padding: 0 2px;
-        line-height: 34px;
-        font-size: 1.5em;
+        @apply(--layout-horizontal);
+        @apply(--layout-center);
+        @apply(--layout-center-justified);
+        height: 67%;
+
+        @apply(--paper-font-menu);
+        font-size: 20px;
+        font-weight: 500;
+        /*padding: 0 2px;*/
+        /*line-height: 34px;*/
       }
     </style>
   </template>
