Move sky to its own component

--- a/src/sib-cloud.html
+++ b/src/sib-cloud.html
@@ -5,13 +5,13 @@
 
     <style>
       :host {
-        --sky-cloud-size-private: var(--sky-cloud-size, 100px);
+        --sib-cloud-size-private: var(--sib-cloud-size, 100px);
         display: block;
       }
 
       .cloud {
-        width: calc(var(--sky-cloud-size-private) * 2);
-        height: var(--sky-cloud-size-private);
+        width: calc(var(--sib-cloud-size-private) * 2);
+        height: var(--sib-cloud-size-private);
         position: relative;
       }
 
