--- a/src/sib-sun.html
+++ b/src/sib-sun.html
@@ -7,8 +7,8 @@
     <style>
       :host {
         display: block;
-        width: var(--sky-sun-size, 100px);
-        height: var(--sky-sun-size, 100px);
+        width: var(--sib-sun-size, 100px);
+        height: var(--sib-sun-size, 100px);
         border-radius: 50%;
         background-color: var(--sib-sub-color, #ffeb3b);
       }
