--- a/src/sib-app.html
+++ b/src/sib-app.html
@@ -6,8 +6,7 @@
 <link rel="import" href="../bower_components/app-storage/app-localstorage/app-localstorage-document.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="sib-sun.html">
-<link rel="import" href="sib-cloud.html">
+<link rel="import" href="sib-sky.html">
 <link rel="import" href="sib-days.html">
 
 <dom-module id="sib-app">
@@ -68,11 +67,7 @@
       key="sib-prod" data="{{list}}">
     </app-localstorage-document>
 
-    <div class="sky">
-      <sib-sun></sib-sun>
-      <sib-cloud class="one"></sib-cloud>
-      <sib-cloud class="two"></sib-cloud>
-    </div>
+    <sib-sky></sib-sky>
 
     <div class="layout vertical center">
       
