--- a/src/sib-sky.html
+++ b/src/sib-sky.html
@@ -1,7 +1,11 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/neon-animation/neon-animation-runner-behavior.html">
 <link rel="import" href="../bower_components/paper-styles/color.html">
 <link rel="import" href="sib-sun.html">
 <link rel="import" href="sib-cloud.html">
+<link rel="import" href="enter-from-right-animation.html">
+<link rel="import" href="enter-from-left-animation.html">
+<link rel="import" href="rotate-animation.html">
 
 <dom-module id="sib-sky">
   <template>
@@ -49,11 +53,45 @@
 
       is: 'sib-sky',
 
-    //   behaviors: [
-    //     Polymer.NeonAnimationRunnerBehavior
-    //   ],
+      behaviors: [
+        Polymer.NeonAnimationRunnerBehavior
+      ],
 
       properties: {
+        animationConfig: {
+          value: function() {
+            return {
+              'entry': [{
+                name: 'enter-from-right-animation',
+                node: this.$$("sib-cloud.one"),
+                timing: {
+                  duration: 1250,
+                  delay: 250,
+                }
+              },{
+                name: 'enter-from-left-animation',
+                node: this.$$("sib-cloud.two"),
+                timing: {
+                  duration: 1000,
+                  delay: 500,
+                }
+              },{
+                name: 'rotate-animation',
+                node: this.$$("sib-sun"),
+                timing: {
+                  duration: 1200,
+                  delay: -100,
+                }
+              }]              
+            }
+          }      
+        }
+      },
+
+      ready: function () {
+        this.async(function () {
+          this.playAnimation('entry');
+        }, 1);        
       },
 
     });
