--- a/src/sib-week.html
+++ b/src/sib-week.html
@@ -15,6 +15,8 @@
         color: white;
         display: block;
         width: 100%;
+        @apply(--layout-horizontal);
+        @apply(--layout-center-justified);
       }
 
       .container {
@@ -22,6 +24,7 @@
         @apply(--layout-center);
         @apply(--layout-center-justified);
         @apply(--layout-wrap);
+        width: 300px;
       }
 
       .tile {
@@ -31,8 +34,8 @@
         border-width: 2px;
         border-style: solid;
 
-        width: 25vw;
-        height: 15vw;
+        width: 90px;
+        height: 60px;
         margin: 3px;
       }
     </style>
