Add time to tiles

--- a/src/sib-app.html
+++ b/src/sib-app.html
@@ -81,7 +81,7 @@
         [[todaysTime]]
       </div>
       
-      <sib-days list="[[list]]" on-track="track"></sib-days>
+      <!--<sib-days list="[[list]]" on-track="track"></sib-days>-->
       <paper-button>More stats..</paper-button>
       
       <div style="height: 400px"></div>
