--- a/src/sib-week.html
+++ b/src/sib-week.html
@@ -28,22 +28,34 @@
       }
 
       .tile {
-        -webkit-border-radius: 10px;
-        -moz-border-radius: 10px;
+        @apply(--layout-vertical);
+        @apply(--layout-center);
+        @apply(--layout-center-justified);
+
         border-radius: 8px;
-        border-width: 2px;
+        border-width: 1px;
         border-style: solid;
 
         width: 90px;
         height: 60px;
         margin: 3px;
       }
+
+      .time {
+        @apply(--paper-font-title);
+        font-size: 28px;
+        font-weight: 300;
+        /*line-height: 28px;*/
+      }
     </style>
 
     <div class="container">
 
-      <template is="dom-repeat" items="[1,2,3,4,5,6]">
-        <div class="tile"></div>
+      <template is="dom-repeat" items="[[items]]">
+        <div class="tile">
+          <span class="date">[[item.date]]</span>
+          <span class="time">[[item.time]]</span>
+        </div>
       </template>
 
     </div>
@@ -54,6 +66,19 @@
     Polymer({
 
       is: 'sib-week',
+
+      properties: {
+        items: {
+          value: [
+            { time: '07:20', date: 'Mon 03' },
+            { time: '08:05', date: 'Tue 04' },
+            { time: '07:01', date: 'Wed 05' },
+            { time: '07:22', date: 'Thu 06' },
+            { time: '07:20', date: 'Fri 07' },
+            { time: '09:43', date: 'Sat 08' },
+          ]
+        }
+      }
 
     });
   </script>
